--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,9 @@
         {% endblock %}
     </head>
     <body>
+    <nav>
+            <a href="{{ path('movie_search') }}">Recherche de films</a>
+        </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
