--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,9 +12,16 @@
         {% endblock %}
     </head>
     <body>
-    <nav>
+        <nav>
             <a href="{{ path('movie_search') }}">Recherche de films</a>
         </nav>
+        {% for label, messages in app.flashes %}
+            <div class="flash-{{ label }}">
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endfor %}
         {% block body %}{% endblock %}
     </body>
 </html>
