--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -3,7 +3,8 @@
         <img src="{{ asset('images/logopopcornaddict.png') }}" alt="Logo">
     </a>
     <div class="navbar-links">
-        <a href="{{ path('movie_search') }}">Recherche de films</a>
+        <a href="{{ path('movie_now_playing') }}">Films</a>
+        <a href="{{ path('tvshows_now_playing') }}">Séries</a>
         <a href="{{ path('app_register') }}">Inscription</a>
         <a href="{{ path('app_login') }}">Connexion</a>
     </div>
